[gd_scene load_steps=2 format=3 uid="uid://ca78hj6p817ud"]

[ext_resource type="Script" path="res://scripts/level_up_ui.gd" id="1_yekkk"]

[node name="LevelUpUI" type="CanvasLayer"]
script = ExtResource("1_yekkk")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5882353)

[node name="Label" type="Label" parent="."]
offset_left = 636.0
offset_top = 315.0
offset_right = 1310.0
offset_bottom = 379.0
theme_override_font_sizes/font_size = 45
text = "LEVEL UP! ESCOLHA UM PODER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="OptionButton1" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Power-Up 1"

[node name="OptionButton2" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Power-Up 2"

[node name="OptionButton3" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Power-Up 3"
